crates/viewer_support/re_dataframe_ui/tests/snapshots/filter_tests__float_compares@nulls_gt_4.snap
---
source: crates/viewer_support/re_dataframe_ui/tests/filter_tests.rs
expression: test_results
---
TestResult {
    filter: Float(
        FloatFilter {
            operator: Gt,
            rhs_value: Some(
                4.0,
            ),
        },
    ),
    field: Field {
        name: "column",
        data_type: Float64,
        nullable: true,
    },
    unfiltered: PrimitiveArray<Float64>
    [
      1.0,
      2.0,
      null,
      4.0,
      5.0,
    ],
    filtered: PrimitiveArray<Float64>
    [
      5.0,
    ],
}
